fixed white space above header

--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,22 @@ img {
   width: 60%;
 }
 
+header{
+  margin: 0;
+  padding: 0;
+}
 
 
 .logo {
-  background : linear-gradient(var(--logo-bg-color), var(--body-bg-color));
-
+    background : linear-gradient(var(--logo-bg-color), var(--body-bg-color));
+    margin-top: 0;
     --logo-bg-color: hsla(189, 48%, 61%, 0.807);
     opacity: 1;
     border-top: 0;
     font: 290%/1.6 georgian;
     padding-bottom: 10;
-    a:link { 
+    
+    a:visited { 
       color: #000000;
       text-decoration: none; 
     } 
